
QDS 3.253:

* [QD-1021] dxlib: Allow Log4j2 as logging implementation
* [QD-1018] BUGFIX: SubscriptionProcessor stops working after exception

QDS 3.252:

* [QD-1005] Investigate enforcing specific version of TLS (TLS 2.1) programmatically in QD RMI
  - tls, ssl codecs and option "isTls' are always working through SSLConnectionFactory
  - New property "protocols" for tls codec is introduce in address string.
  - New property "cipherSuites" for tls codec is introduce in address string.
  - Now address line may look like:
    tls[protocols=TLSv1.2,cipher=SSL_DHE_RSA_WITH_3DES_EDE_CBC_SHA;TLS_EMPTY_RENEGOTIATION_INFO_SCSV]+:7777
* [QD-1015] [dxFeedViewer] Change default ipf-address protocol from http to https
* [QD-1013] dxlib: Add toString() to TypedMap and TypedKey
* [QD-1014] BUG FIX: JDK1.8.0_121 does't support script javascript in documentation comment
* [QD-1016] BUG FIX: Incorrect translation of close price from OnDemand to Summary record
* [QD-1017] BUG FIX: Spurious ULP formatting in IPF

QDS 3.251:

* [QD-1011] History does not use subscription filter which is specified as service
* [QD-1008] Schedule: Update Turkey holidays for 2017-2019 to schedule.properties
* [QD-1007] Improve CPU usage of idle SocketReader

QDS 3.250:

* [QD-995] Prepare QD for delivering to GitHub
* [QD-998] Add FreeFloat field to Profile record
* [QD-999] dxlib: Add specific factory methods to IndexedSet
* [QD-1001] QD unable to recover after I/O error
* [QD-1004] OnDemand stops replaying events at data block boundary

QDS 3.249:

* [QD-994] FileWriter writes invalid eventTime for "long" and "text" time formats
* [QD-997] QDHistory does not properly store nor transmit event time sequences

QDS 3.248:

* [QD-894] Update time-test to version 1.1
* [QD-987] DXPublisherTest sporadically fails
* [QD-990] Optimize QTP composer for "spurious return" of data/sub provider
* [QD-991] BUG FIX: RMIMessageAdapter does not honor contract for time-based aggregation which leads to data loss/delay
